fixes #1138 - The pm notification Popup doesn't fit on 480x800px, let's reduce the size. Signed-off-by:Thorsten Eurich <thorsten@eurich.de>

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -4493,6 +4493,9 @@ a.help .icon {
 	.pm_icon, .pm_quickmod, .label_pms {
 		display: none;
 	}
+	.popup_window {
+		width: 95%;
+	}
 	/*	$MODERATE	*/
 	/* ------------------------------------------------------- */
 	.split_topics, .move_topic {
